Made the FillInBlankViewController work.

--- a/SampleApplication/SampleApplication/Base.lproj/Main.storyboard
+++ b/SampleApplication/SampleApplication/Base.lproj/Main.storyboard
@@ -15,33 +15,47 @@
             <objects>
                 <viewController id="7ig-hG-yZz" customClass="FillInBlankViewController" customModule="SampleApplication" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="byc-xb-acX">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="2FP-Vo-49H">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t71-Hh-c6q">
+                                <rect key="frame" x="0.0" y="20" width="375" height="922"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="VFn-cA-9em">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="922"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="39"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="VFn-cA-9em" secondAttribute="trailing" id="DAa-9a-Ing"/>
+                                    <constraint firstItem="VFn-cA-9em" firstAttribute="centerY" secondItem="t71-Hh-c6q" secondAttribute="centerY" id="DqY-KI-vN7"/>
+                                    <constraint firstItem="VFn-cA-9em" firstAttribute="leading" secondItem="t71-Hh-c6q" secondAttribute="leading" id="OJS-Ps-T24"/>
+                                    <constraint firstItem="VFn-cA-9em" firstAttribute="width" secondItem="t71-Hh-c6q" secondAttribute="width" id="RQq-O7-e30"/>
+                                    <constraint firstAttribute="bottom" secondItem="VFn-cA-9em" secondAttribute="bottom" id="sa1-mX-OHr"/>
+                                    <constraint firstItem="VFn-cA-9em" firstAttribute="top" secondItem="t71-Hh-c6q" secondAttribute="top" id="sdn-5L-J6c"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Dvf-Sx-VpH" firstAttribute="trailing" secondItem="2FP-Vo-49H" secondAttribute="trailing" id="EAJ-zL-F3I"/>
-                            <constraint firstItem="Dvf-Sx-VpH" firstAttribute="bottom" secondItem="2FP-Vo-49H" secondAttribute="bottom" id="EBq-8n-Spc"/>
-                            <constraint firstItem="2FP-Vo-49H" firstAttribute="top" secondItem="Dvf-Sx-VpH" secondAttribute="top" id="a1d-YY-2Bm"/>
-                            <constraint firstItem="2FP-Vo-49H" firstAttribute="leading" secondItem="Dvf-Sx-VpH" secondAttribute="leading" id="dLU-99-kcV"/>
+                            <constraint firstItem="t71-Hh-c6q" firstAttribute="leading" secondItem="Dvf-Sx-VpH" secondAttribute="leading" id="IZc-YX-ede"/>
+                            <constraint firstItem="Dvf-Sx-VpH" firstAttribute="bottom" secondItem="t71-Hh-c6q" secondAttribute="bottom" constant="58" id="YZX-07-viz"/>
+                            <constraint firstItem="Dvf-Sx-VpH" firstAttribute="trailing" secondItem="t71-Hh-c6q" secondAttribute="trailing" id="aWq-wO-y5O"/>
+                            <constraint firstItem="t71-Hh-c6q" firstAttribute="top" secondItem="Dvf-Sx-VpH" secondAttribute="top" id="lhN-lf-Mfp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Dvf-Sx-VpH"/>
                     </view>
+                    <size key="freeformSize" width="375" height="1000"/>
                     <connections>
-                        <outlet property="textView" destination="2FP-Vo-49H" id="R0T-oa-PMV"/>
+                        <outlet property="textView" destination="VFn-cA-9em" id="sLC-vY-i0v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CsZ-In-ECA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1718" y="-138"/>
+            <point key="canvasLocation" x="-1719.2" y="-138.0809595202399"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -157,10 +171,10 @@
             </objects>
             <point key="canvasLocation" x="28" y="-71"/>
         </scene>
-        <!--View Controller-->
+        <!--Fill In Blank View Controller-->
         <scene sceneID="aiP-gU-NMJ">
             <objects>
-                <viewController id="wLz-lr-CHh" sceneMemberID="viewController">
+                <viewController id="wLz-lr-CHh" customClass="FillInBlankViewController" customModule="SampleApplication" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sfr-bb-78k">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="1667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
